--- a/Essentials_for_Scientific_Writing_with_Jupyter_Notebook.ipynb
+++ b/Essentials_for_Scientific_Writing_with_Jupyter_Notebook.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "# Theme\n",
     "\n",
-    "Well, a theme is not a skill, but before we start our Jupyter journey, we need a eye pleasing theme. A nice Jupyter theme for your Jupyter Notebook is like a nice pillow for your sleep. You are going to spend a lot of time writing with Jupyter Notebook, let's find a nice theme for your taste and modify font sizes. We need to take care of our eyes. \n",
+    "Before we start our Jupyter journey, we need a eye pleasing theme. A nice Jupyter theme for your Jupyter Notebook is like a nice pillow for your sleep. You are going to spend a lot of time writing with Jupyter Notebook, let's find a nice theme for your taste and modify font sizes. We need to take care of our eyes. \n",
     "\n",
     "Let's install [JupyterThemes](https://github.com/dunovank/jupyter-themes). Open your terminal and type the followings.\n",
     "\n",
@@ -75,7 +75,7 @@
     "If you want to change the text cell font and fontsize you can type the following in a cell and hit shift+enter.\n",
     "\n",
     "```\n",
-    "jt -t oceans16 -tf merriserif -tfs 14 -nf ptsans -nfs 14\n",
+    "!jt -t oceans16 -tf merriserif -tfs 14 -nf ptsans -nfs 14\n",
     "```\n",
     "\n",
     "You can find [all font types here](https://github.com/dunovank/jupyter-themes#monospace-fonts-code-cells).\n",
@@ -83,7 +83,7 @@
     "Currently, I am using the following setting.\n",
     "\n",
     "```\n",
-    "jt -t grade3 -tfs 13 -mathfs 110 -fs 13 -N -T\n",
+    "!jt -t grade3 -tf firacode -tfs 13 -mathfs 110 -fs 13 -N -T \n",
     "```"
    ]
   },
@@ -93,15 +93,16 @@
    "source": [
     "# Markdown\n",
     "\n",
-    "[Markdown is a lightweight markup language with plain-text-formatting syntax.](https://en.wikipedia.org/wiki/Markdown)\n",
+    "Markdown is a lightweight markup language with plain-text-formatting syntax.[Wikipedia](https://en.wikipedia.org/wiki/Markdown)\n",
     "\n",
     "## How to change the cell to markdown\n",
     "\n",
-    "One way you can a cell to markdown is selecting Markdown from a dropdown.\n",
+    "One way to change a cell to markdown is selecting Markdown from a dropdown.\n",
     "\n",
     "![select markdown](./image/markdown.png)\n",
     "\n",
-    "Second way is to use a shortcut, `m` after selecting a cell. You may need to press escape if you are typing `m` in the cell.\n",
+    "Another way is to use a shortcut, `m` after selecting a cell. You may need to press escape if you are typing `m` in the cell. `y` change a cell to code.\n",
+    "\n",
     "\n",
     "## Headers\n",
     "\n",
@@ -114,19 +115,20 @@
    "source": [
     "# Main title\n",
     "## Sub title\n",
-    "### H3 title"
+    "### H3 title\n",
+    "#### H4 title"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "The above will print out the following.\n",
     "\n",
     "# Main title\n",
     "## Sub title\n",
-    "### H3 title"
+    "### H3 title\n",
+    "###### H4 title"
    ]
   },
   {
@@ -427,6 +429,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": []
