--- a/How_to_Write_Your_First_Data_Science_Article_with_Jupyter_Notebook.ipynb
+++ b/How_to_Write_Your_First_Data_Science_Article_with_Jupyter_Notebook.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Essentials for Scientific Writing with Jupyter Notebook\n",
+    "# How to Write Your First Data Science Article with Jupyter Notebook\n",
+    "## Essentials for Beginners\n",
     "\n",
     "* Introduction\n",
-    "* Theme\n",
+    "* Before Writing\n",
     "* Markdown\n",
     "* Latex\n",
     "* Printing PDF\n",
@@ -21,7 +22,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Theme\n",
+    "# Before Writing\n",
+    "## Jupyter Notebook Shortcuts\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Theme\n",
     "\n",
     "Before we start our Jupyter journey, we need a eye pleasing theme. A nice Jupyter theme for your Jupyter Notebook is like a nice pillow for your sleep. You are going to spend a lot of time writing with Jupyter Notebook, let's find a nice theme for your taste and modify font sizes. We need to take care of our eyes. \n",
     "\n",
@@ -128,7 +134,7 @@
     "# Main title\n",
     "## Sub title\n",
     "### H3 title\n",
-    "###### H4 title"
+    "#### H4 title"
    ]
   },
   {
@@ -403,6 +409,8 @@
     "- https://markdown-guide.readthedocs.io/en/latest/basics.html#markdown-basics\n",
     "- https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet\n",
     "- https://www.markdownguide.org/extended-syntax/\n",
+    "- https://qiita.com/koikoi_jam/items/29d9ef4e16a42038325c\n",
+    "\n",
     "\n",
     "\n"
    ]
