--- a/5_Essential_Tips_with_Jupyter_Notebook.ipynb
+++ b/5_Essential_Tips_with_Jupyter_Notebook.ipynb
@@ -4,30 +4,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to Write Your First Data Science Article with Jupyter Notebook\n",
-    "## Essentials for Beginners\n",
+    "# 5 Essential Tips with Jupyter Notebook\n",
+    "## Before Start Writing Your First Data Science Article\n",
     "\n",
     "* Introduction\n",
-    "* Before Writing\n",
+    "* Help & Shortcuts\n",
+    "* Jupyter Themes\n",
     "* Markdown\n",
     "* Latex\n",
     "* Printing PDF\n",
     "\n",
     "# Introduction\n",
     "\n",
-    "In this article, I will cover must-know items for your scientific writing using Jupyter Notebook. "
+    "In this article, I will cover must-know items for Jupyter Notebook. If you know these things you will be ready to write your first article.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Before Writing\n",
-    "## Jupyter Notebook Shortcuts\n",
     "\n",
+    "# Jupyter Notebook Help & Shortcuts\n",
     "\n",
+    "Pressing `h` toggles the keyboards shortcuts screen. You can see all commands by pressing &#8984;&#8679;f. I use the following shortcuts often and it will be useful if you can memorize them.\n",
     "\n",
-    "## Theme\n",
+    "Symbol | Name\n",
+    "---------|-----\n",
+    "&#8984; | Command, Cmd \n",
+    "&#8963; |Control, Ctl\n",
+    "&#8997; |Option Opt \n",
+    "&#8679; |Shift \n",
+    "&#8617; |Retrun\n",
+    "&#9251; |Space\n",
+    "&#8677; |Tab  \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Shortcut | Function\n",
+    "---------|---------\n",
+    "&#8679;&#8617; | Run cell and select below\n",
+    "&#8963;&#8617; | Run selected cells\n",
+    "&#8997;&#8617; | Run cell and insert below\n",
+    "m | Change cell to markdown\n",
+    "y | Change cell to code\n",
+    "h | Toggle help\n",
+    "&#8984;&#8679;f | Open the command palette\n",
+    "a | Insert cell above\n",
+    "b | Insert cell below\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "# Theme\n",
     "\n",
     "Before we start our Jupyter journey, we need a eye pleasing theme. A nice Jupyter theme for your Jupyter Notebook is like a nice pillow for your sleep. You are going to spend a lot of time writing with Jupyter Notebook, let's find a nice theme for your taste and modify font sizes. We need to take care of our eyes. \n",
     "\n",
@@ -56,9 +83,8 @@
     "ondork|solarizedd|solarizedl\n",
     "\n",
     "<br>\n",
-    "<br>\n",
     "\n",
-    "If you want to use ocean16, you can change your theme in a cell by typing and hit shift+enter.\n",
+    "If you want to use ocean16, you can change your theme in a Jupyter Notebook cell by typing the following and hit shift+enter.\n",
     "\n",
     "```\n",
     "!jt -t oceans16\n",
@@ -258,6 +284,7 @@
    "source": [
     "The rendered output looks like this:\n",
     "\n",
+    "<br>\n",
     "\n",
     "| Syntax      | Description |\n",
     "| ----------- | ----------- |\n",
@@ -410,6 +437,7 @@
     "- https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet\n",
     "- https://www.markdownguide.org/extended-syntax/\n",
     "- https://qiita.com/koikoi_jam/items/29d9ef4e16a42038325c\n",
+    "- https://github.com/dunovank/jupyter-themes#monospace-fonts-code-cells\n",
     "\n",
     "\n",
     "\n"
@@ -436,10 +464,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!jt -t grade3 -tf firacode -tfs 13 -mathfs 110 -fs 13 -N -T -lineh 250"
+   ]
   },
   {
    "cell_type": "code",
