--- a/5_Essential_Tips_with_Jupyter_Notebook.ipynb
+++ b/5_Essential_Tips_with_Jupyter_Notebook.ipynb
@@ -8,7 +8,7 @@
     "## Before Start Writing Your First Data Science Article\n",
     "\n",
     "* Introduction\n",
-    "* Help & Shortcuts\n",
+    "* Jupyter Notebook\n",
     "* Jupyter Themes\n",
     "* Markdown\n",
     "* Latex\n",
@@ -16,21 +16,21 @@
     "\n",
     "# Introduction\n",
     "\n",
-    "In this article, I will cover must-know items for Jupyter Notebook. If you know these things you will be ready to write your first article.  "
+    "In this article, I will cover must-know items for Jupyter Notebook. If you know these things you will be ready to write your first data science article.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Jupyter Notebook \n",
+    "## Help & Shortcuts\n",
     "\n",
-    "# Jupyter Notebook Help & Shortcuts\n",
+    "Shortcuts will speed up your writing. Pressing `h` toggles the keyboards shortcuts screen. You can see all commands by pressing &#8984;&#8679;f. I use the following shortcuts often and it will be useful if you can memorize them.\n",
     "\n",
-    "Pressing `h` toggles the keyboards shortcuts screen. You can see all commands by pressing &#8984;&#8679;f. I use the following shortcuts often and it will be useful if you can memorize them.\n",
-    "\n",
-    "Symbol | Name\n",
-    "---------|-----\n",
-    "&#8984; | Command, Cmd \n",
+    "Symbol  | Name\n",
+    "------- |-----\n",
+    "&#8984; |Command, Cmd \n",
     "&#8963; |Control, Ctl\n",
     "&#8997; |Option Opt \n",
     "&#8679; |Shift \n",
@@ -53,21 +53,32 @@
     "b | Insert cell below\n",
     "\n",
     "<br>\n",
+    "## Line number\n",
+    "\n",
+    "View > Toggle Line Numbers\n",
     "\n",
     "# Theme\n",
     "\n",
     "Before we start our Jupyter journey, we need a eye pleasing theme. A nice Jupyter theme for your Jupyter Notebook is like a nice pillow for your sleep. You are going to spend a lot of time writing with Jupyter Notebook, let's find a nice theme for your taste and modify font sizes. We need to take care of our eyes. \n",
     "\n",
-    "Let's install [JupyterThemes](https://github.com/dunovank/jupyter-themes). Open your terminal and type the followings.\n",
-    "\n",
-    "```\n",
+    "Let's install [JupyterThemes](https://github.com/dunovank/jupyter-themes). Open your terminal and type the followings."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
     "# install jupyterthemes\n",
     "pip install jupyterthemes\n",
     "\n",
     "# upgrade to latest version\n",
-    "pip install --upgrade jupyterthemes\n",
-    "```\n",
-    "\n",
+    "pip install --upgrade jupyterthemes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There are nine themes, chesterish, grade3, ggruvboxd, gruvboxl, monokai, oceans16, onedork, solarizedd, solarizedl. \n",
     "\n",
     "![chesterish](./image/themes/chesterish.png)|![grade3](./image/themes/grade3.png)|![gruvboxd](./image/themes/gruvboxd.png)\n",
@@ -84,19 +95,37 @@
     "\n",
     "<br>\n",
     "\n",
-    "If you want to use ocean16, you can change your theme in a Jupyter Notebook cell by typing the following and hit shift+enter.\n",
-    "\n",
-    "```\n",
-    "!jt -t oceans16\n",
-    "```\n",
-    "\n",
-    "If you want to reset the theme.\n",
-    "\n",
-    "```\n",
-    "!jt -r\n",
-    "```\n",
-    "\n",
+    "If you want to use ocean16, you can change your theme in a Jupyter Notebook cell by typing the following and hit shift+enter."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "!jt -t oceans16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to reset the theme."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "!jt -r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Font & Fontsize\n",
+    "\n",
+    "### Method one\n",
     "\n",
     "The following image shows the position of fonts. \n",
     "![Jupyter theme font](./image/tf1.png)\n",
@@ -104,19 +133,69 @@
     "The following image shows the font size.\n",
     "![Jupyter theme fontsize](./image/tf.png)\n",
     "\n",
-    "If you want to change the text cell font and fontsize you can type the following in a cell and hit shift+enter.\n",
-    "\n",
-    "```\n",
-    "!jt -t oceans16 -tf merriserif -tfs 14 -nf ptsans -nfs 14\n",
-    "```\n",
-    "\n",
+    "If you want to change the text cell font and fontsize you can type the following in a cell and hit shift+enter."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "!jt -t oceans16 -tf merriserif -tfs 14 -nf ptsans -nfs 14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "You can find [all font types here](https://github.com/dunovank/jupyter-themes#monospace-fonts-code-cells).\n",
     "\n",
-    "Currently, I am using the following setting.\n",
+    "You can try the following setting."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "!jt -t grade3 -tf firacode -tfs 13 -mathfs 110 -fs 13 -N -T "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Method two\n",
     "\n",
-    "```\n",
-    "!jt -t grade3 -tf firacode -tfs 13 -mathfs 110 -fs 13 -N -T \n",
-    "```"
+    "If you do not want to to change the theme but want to change font size and font, then you can change the CSS. Open `.jupyter\\custom\\custom.css` in a editor. If you don't have an editor, please install [VS code](https://code.visualstudio.com/download).\n",
+    "\n",
+    "And paste the followings. You can change `font-size:110%` to any number as you like."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "body {\n",
+    "    /*font-size: 1.5em;*/\n",
+    "}\n",
+    "\n",
+    "div#notebook p, div#notebook{\n",
+    "    font-size: 110%\n",
+    "}\n",
+    "\n",
+    ".rendered_html pre, .rendered_html table{\n",
+    "    font-size:110%\n",
+    "}\n",
+    "\n",
+    ".CodeMirror, .CodeMirror pre, .CodeMirror-dialog, .CodeMirror-dialog .CodeMirror-search-field, .terminal-app .terminal {\n",
+    "    font-size: 110%;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the file and reload the page to see the change."
    ]
   },
   {
@@ -307,54 +386,46 @@
     "\n",
     "[LaTeX](https://en.wikipedia.org/wiki/LaTeX) is widely used in academia for the communication and publication of scientific documents in many fields.\n",
     "\n",
+    "You need to enclose them in dollar($) signs. \n",
     "\n",
-    "\n",
-    "## Fractions  \n",
-    "\n",
-    "`\\frac{}{}`  \n",
+    "A single dollar($) sign align it to the left.\n",
     "\n",
     "`$P(A)=\\frac{n(A)}{n(U)}$`\n",
     "\n",
     "$P(A)=\\frac{n(A)}{n(U)}$\n",
     "\n",
+    "Double dollar($$) signs align it to the center.\n",
+    "\n",
+    "`$$P(A)=\\frac{n(A)}{n(U)}$$`\n",
+    "\n",
+    "$$P(A)=\\frac{n(A)}{n(U)}$$\n",
     "\n",
     "\n",
     "\n",
-    "## Superscript and subscript\n",
-    "\n",
+    "Math | LaTeX | Example | <div style=\"width:290px\">Output</div>\n",
+    ":--|:--:|:--:|:--:\n",
+    "Fraction | \\frac{}{} | P(A)=\\frac{n(A)}{n(U)}| $P(A)=\\frac{n(A)}{n(U)}$\n",
+    "Superscript|u^n|u_n=u_1r^{n-1}|$u_n=u_1r^{n-1}$\n",
+    "Subscript | u_n | u_n=u_1+(n-1)d|$u_n=u_1+(n-1)d$\n",
+    "Laten letters | \\alpha | \\alpha \\Gamma|$\\alpha \\Gamma$\n",
+    "Text| \\text{} | A=\\pi r^2\\text{ ,where r is the radius}| $A=\\pi r^2\\text{ ,where r is the radius}$\n",
+    "Sigma | \\sum | n=\\sum \\limits _{i=1} ^{\\infty} f_i |$n=\\sum \\limits _{i=1} ^{\\infty} f_i$\n",
     "\n",
     "## Limit\n",
-    "\n",
-    "\n",
-    "## Laten letters\n",
-    "\n",
-    "\n",
-    "## Sigma notation\n",
-    "\n",
-    "\n",
+    "$\\lim_{x\\to\\infty}$\n",
     "## Integration\n",
-    "\n",
-    "\n",
     "## Matrix\n",
     "\n",
-    "\n",
-    "## Text\n",
+    "$ \\sum \\limits _{i=1} ^{10} \\int \\limits _0 ^{\\infty} e^{\\nu _i x } dx $ \n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "$P(A)=\\frac{n(A)}{n(U)}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$y=\\frac{L}{1+Ce^{-kx}}, L,k,C>0$\n"
+    "\n"
    ]
   },
   {
@@ -404,7 +475,7 @@
    "source": [
     "# Export to PDF\n",
     "\n",
-    "Once you are done with your writing, you want to export to PDF file.\n",
+    "Once you are done with your writing and if you want to export to PDF file, you can print out as PDF.\n",
     "\n",
     "[Stackoverflow](https://stackoverflow.com/questions/34818723/export-notebook-to-pdf-without-code)\n",
     "\n",
@@ -412,15 +483,30 @@
     "\n",
     "![download as](image/downloadas.png)\n",
     "\n",
-    "* Open the exported HTML with browser and activate the browser console with key F12\n",
+    "* Open the exported HTML with browser and activate the browser console with key F12 or &#8984; + i.\n",
     "\n",
-    "* Run following command in the console:\n",
+    "![console](image/console.png)\n",
     "\n",
-    "```\n",
-    "document.querySelectorAll(\"div.input\").forEach(function(a){a.remove()})\n",
-    "```\n",
+    "* Run following command in the console:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "document.querySelectorAll(\"div.input\").forEach(function(a){a.remove()})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![console](image/console2.png)\n",
+    "\n",
     "\n",
     "* The code removes all input div DOM. Then right mouse button and chose \"Save Page As\" and Save the \"Complete page\" (not single page).\n",
+    "\n",
+    "![console](image/save.png)\n",
     "\n",
     "* You will get a page with an associated folder in windows. Use a trick by zip the html page and then extract to unbind the associated. \n",
     "\n",
@@ -438,45 +524,9 @@
     "- https://www.markdownguide.org/extended-syntax/\n",
     "- https://qiita.com/koikoi_jam/items/29d9ef4e16a42038325c\n",
     "- https://github.com/dunovank/jupyter-themes#monospace-fonts-code-cells\n",
-    "\n",
-    "\n",
+    "- https://www.overleaf.com/learn/latex/Integrals,_sums_and_limits\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reset css and font defaults in:\r\n",
-      "/Users/shinokada/.jupyter/custom &\r\n",
-      "/Users/shinokada/Library/Jupyter/nbextensions\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!jt -r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!jt -t grade3 -tf firacode -tfs 13 -mathfs 110 -fs 13 -N -T -lineh 250"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
