--- a/5_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/5_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -4,27 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5 Essential Tips with Jupyter Notebook\n",
-    "## Before Start Writing Your First Data Science Article\n",
+    "# 7 Essential Tips for Writing with Jupyter Notebook\n",
+    "## For Your First Data Science Article\n",
+    "\n",
+    "### Table of Contents\n",
     "\n",
     "* Introduction\n",
-    "* Jupyter Notebook\n",
-    "* Jupyter Themes\n",
+    "* Help, Shortcuts and Number lines\n",
+    "* Theme and Fonts\n",
     "* Markdown\n",
     "* Latex\n",
+    "* Writing tools\n",
     "* Printing PDF\n",
     "\n",
     "# Introduction\n",
     "\n",
-    "In this article, I will cover must-know items for Jupyter Notebook. If you know these things you will be ready to write your first data science article.  "
+    "Jupyter Notebook is great to create and share a document containing code, visualization, and text. In this article, I will show you some helpful tips before you are writing your first Data Science article with Jupyter Notebook."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jupyter Notebook \n",
-    "## Help & Shortcuts\n",
+    "# Help, Shortcuts and Number lines\n",
     "\n",
     "Shortcuts will speed up your writing. Pressing `h` toggles the keyboards shortcuts screen. You can see all commands by pressing &#8984;&#8679;f. I use the following shortcuts often and it will be useful if you can memorize them.\n",
     "\n",
@@ -51,15 +53,21 @@
     "&#8984;&#8679;f | Open the command palette\n",
     "a | Insert cell above\n",
     "b | Insert cell below\n",
+    "dd | Delete a cell selected\n",
+    "&#8679; L | Toggle line numbers\n",
     "\n",
     "<br>\n",
-    "## Line number\n",
     "\n",
-    "View > Toggle Line Numbers\n",
+    "## Line numbers on\n",
+    "\n",
+    "It is a good idea to have line numbers on in your Jupyter Notebook. When you have an error, it is easy to find the line. Besides the above shortcut, you can also use View > Toggle Line Numbers.\n",
+    "\n",
+    "![Number lines](./image/numberlines.png)\n",
+    "\n",
     "\n",
     "# Theme\n",
     "\n",
-    "Before we start our Jupyter journey, we need a eye pleasing theme. A nice Jupyter theme for your Jupyter Notebook is like a nice pillow for your sleep. You are going to spend a lot of time writing with Jupyter Notebook, let's find a nice theme for your taste and modify font sizes. We need to take care of our eyes. \n",
+    "A nice Jupyter theme for your Jupyter Notebook is like a nice pillow for your sleep. You are going to spend a lot of time writing with Jupyter Notebook, let's find a nice theme for your taste and modify font sizes. \n",
     "\n",
     "Let's install [JupyterThemes](https://github.com/dunovank/jupyter-themes). Open your terminal and type the followings."
    ]
@@ -68,10 +76,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# install jupyterthemes\n",
     "pip install jupyterthemes\n",
-    "\n",
-    "# upgrade to latest version\n",
     "pip install --upgrade jupyterthemes"
    ]
   },
@@ -95,7 +100,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "If you want to use ocean16, you can change your theme in a Jupyter Notebook cell by typing the following and hit shift+enter."
+    "If you want to use ocean16, you can change your theme from a Jupyter Notebook cell by typing the following and hit shift+enter."
    ]
   },
   {
@@ -109,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to reset the theme."
+    "If you want to reset the theme, use this code."
    ]
   },
   {
@@ -165,7 +170,8 @@
    "source": [
     "### Method two\n",
     "\n",
-    "If you do not want to to change the theme but want to change font size and font, then you can change the CSS. Open `.jupyter\\custom\\custom.css` in a editor. If you don't have an editor, please install [VS code](https://code.visualstudio.com/download).\n",
+    "If you do not want to to change the theme but want to change the font size and font, then you need to change the Jupyter Notebook\n",
+    "CSS. Open `.jupyter\\custom\\custom.css` in a editor. If you don't have an editor, please install [VS code](https://code.visualstudio.com/download).\n",
     "\n",
     "And paste the followings. You can change `font-size:110%` to any number as you like."
    ]
@@ -204,7 +210,7 @@
    "source": [
     "# Markdown\n",
     "\n",
-    "Markdown is a lightweight markup language with plain-text-formatting syntax.[Wikipedia](https://en.wikipedia.org/wiki/Markdown)\n",
+    "Markdown is a lightweight markup language with plain-text-formatting syntax. ([Wikipedia](https://en.wikipedia.org/wiki/Markdown))\n",
     "\n",
     "## How to change the cell to markdown\n",
     "\n",
@@ -212,7 +218,7 @@
     "\n",
     "![select markdown](./image/markdown.png)\n",
     "\n",
-    "Another way is to use a shortcut, `m` after selecting a cell. You may need to press escape if you are typing `m` in the cell. `y` change a cell to code.\n",
+    "Another way is to use a shortcut, `m` after selecting a cell. You may need to press escape if you are typing `m` in the cell, `y` to change to code and `r` to change to raw.\n",
     "\n",
     "\n",
     "## Headers\n",
@@ -248,7 +254,7 @@
    "source": [
     "## List\n",
     "\n",
-    "You can use * or - to create an unordered list. You can use numbers for an ordered list."
+    "You can use * or - to create an nested unordered list and use numbers for an ordered list."
    ]
   },
   {
@@ -325,7 +331,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "![alt text here](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \"Logo Title Text 1\")"
+    "![alt text here](./image/jupyter_logo.png \"Logo Title Jupyter Notebook logo\")"
    ]
   },
   {
@@ -333,7 +339,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "The above markdown produces: ![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \"Logo Title Text 1\").\n",
+    "The above markdown produces: ![alt text here](./image/jupyter_logo.png \"Logo Title Jupyter Notebook logo\").\n",
     "\n"
    ]
   },
@@ -343,18 +349,17 @@
    "source": [
     "## Tables\n",
     "\n",
-    "To add a table, use three or more hyphens (---) to create each column’s header, and use pipes (|) to separate each column. You can optionally add pipes on either end of the table.\n",
-    "\n"
+    "To add a table, use three or more hyphens (---) to create each column’s header, and use pipes (|) to separate each column. You can optionally add pipes on either end of the table. Use `:---:` to center a column, `:---` to align left.\n"
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "| Syntax      | Description |\n",
-    "| ----------- | ----------- |\n",
-    "| Header      | Title       |\n",
-    "| Paragraph   | Text        |"
+    "Id | Syntax      | Description \n",
+    "--|:---------:|:-----------:\n",
+    "1|Header      | Title       \n",
+    "2|Paragraph   | Text        "
    ]
   },
   {
@@ -365,10 +370,11 @@
     "\n",
     "<br>\n",
     "\n",
-    "| Syntax      | Description |\n",
-    "| ----------- | ----------- |\n",
-    "| Header      | Title       |\n",
-    "| Paragraph   | Text        |"
+    "Id | Syntax      | Description \n",
+    "--|:---------:|:-----------:\n",
+    "1|Header      | Something very long long long here      \n",
+    "2|Long long long paragraph   | Text  \n",
+    "   "
    ]
   },
   {
@@ -382,91 +388,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Latex\n",
+    "# Writing Math with Latex\n",
     "\n",
     "[LaTeX](https://en.wikipedia.org/wiki/LaTeX) is widely used in academia for the communication and publication of scientific documents in many fields.\n",
     "\n",
-    "You need to enclose them in dollar($) signs. \n",
+    "- You need to enclose them in dollar($) signs. \n",
     "\n",
-    "A single dollar($) sign align it to the left.\n",
+    "To align to the left use a single dollar($) sign.\n",
     "\n",
     "`$P(A)=\\frac{n(A)}{n(U)}$`\n",
     "\n",
     "$P(A)=\\frac{n(A)}{n(U)}$\n",
     "\n",
-    "Double dollar($$) signs align it to the center.\n",
+    "To align to the center use double dollar($$) signs.\n",
     "\n",
     "`$$P(A)=\\frac{n(A)}{n(U)}$$`\n",
     "\n",
     "$$P(A)=\\frac{n(A)}{n(U)}$$\n",
     "\n",
+    "- Use `\\limits` for `\\lim`, `\\sum` and `\\int` to add limits to the top and the bottom of each sign.\n",
+    "\n",
+    "- Use a backslash to escape LaTeX special words such as Math symbols, Latin words, text, etc.\n",
     "\n",
     "\n",
     "Math | LaTeX | Example | <div style=\"width:290px\">Output</div>\n",
     ":--|:--:|:--:|:--:\n",
     "Fraction | \\frac{}{} | P(A)=\\frac{n(A)}{n(U)}| $P(A)=\\frac{n(A)}{n(U)}$\n",
+    "Square root| \\sqrt() |\\sqrt(x+y)|$\\sqrt(x+y)$\n",
     "Superscript|u^n|u_n=u_1r^{n-1}|$u_n=u_1r^{n-1}$\n",
     "Subscript | u_n | u_n=u_1+(n-1)d|$u_n=u_1+(n-1)d$\n",
-    "Laten letters | \\alpha | \\alpha \\Gamma|$\\alpha \\Gamma$\n",
+    "Greek letters | \\alpha | \\alpha \\beta \\pi \\Gamma|$\\alpha \\beta \\pi \\Gamma$\n",
     "Text| \\text{} | A=\\pi r^2\\text{ ,where r is the radius}| $A=\\pi r^2\\text{ ,where r is the radius}$\n",
     "Sigma | \\sum | n=\\sum \\limits _{i=1} ^{\\infty} f_i |$n=\\sum \\limits _{i=1} ^{\\infty} f_i$\n",
+    "Limit | \\lim |\\lim\\limits_{x\\to\\infty}|$\\lim\\limits_{x\\to\\infty}$\n",
+    "Integration|\\int |\\int\\limits_{a}^{b} x^2 dx |$\\int\\limits_{a}^{b} x^2 dx$\n",
+    "Trig| \\sin | \\sin()|$\\sin(x+y)$\n",
+    "Comparison | \\leq | \\leq \\geq \\approx \\neq |$ \\leq \\geq \\approx \\neq$\n",
     "\n",
-    "## Limit\n",
-    "$\\lim_{x\\to\\infty}$\n",
-    "## Integration\n",
-    "## Matrix\n",
+    "For more information please see this [article](https://davidhamann.de/2017/06/12/latex-cheat-sheet/) or [this link](https://www.overleaf.com/learn/latex/Integrals,_sums_and_limits)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Writing tools\n",
     "\n",
-    "$ \\sum \\limits _{i=1} ^{10} \\int \\limits _0 ^{\\infty} e^{\\nu _i x } dx $ \n",
+    "Before publishing your article, I always need to check grammar and words.\n",
     "\n",
+    "- Grammary\n",
+    "\n",
+    "As of the time of writing this article, Grammarly does not work on a browser. So you have to copy and paste to the [web app](https://app.grammarly.com/) or a [desktop app](https://www.grammarly.com/native/mac).\n",
+    "\n",
+    "- Hemmingway Editor\n",
+    "\n",
+    "After checking with Grammarly, [Hemmingwayapp](http://www.hemingwayapp.com/) is the next tool to make your article bold and clear. Even though your audience is \n",
+    "\n",
+    "![Hemmingway Editor](./image/hemmingway.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$y=\\frac{L}{1+Ce^{-kx}}, L,k,C>0$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For more information about LaTeX, please see [this link](https://www.overleaf.com/learn/latex/Integrals,_sums_and_limits)."
    ]
   },
   {
@@ -511,6 +503,15 @@
     "* You will get a page with an associated folder in windows. Use a trick by zip the html page and then extract to unbind the associated. \n",
     "\n",
     "* Now it is a single html page without code. You can re-distribute it or print it as PDF."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    " I hope these will save your time and be ready for your first Data Scienc article. If you have any more tips, please put them in comments."
    ]
   },
   {
